--- a/scss/site.scss
+++ b/scss/site.scss
@@ -223,8 +223,7 @@
         &:nth-child(2n+1) {
             margin-right: 2%;
         }
-        &:last-child,
-        &:nth-last-child(2):nth-child(odd) {
+        &:last-child {
             margin-right: 0;
         }
     };
